# Bubba-3D

./: .gitignore  .travis.yml  AudioManager_8cpp_source.html  BFBroadPhase_8cpp_source.html  BFBroadPhase_8h_source.html  BoneInfluenceOnVertex_8cpp_source.html  BoneInfluenceOnVertex_8h_source.html  BoneMatrices_8h_source.html  BoneTransformer_8cpp_source.html  BoneTransformer_8h_source.html  BroadPhaseCollider_8h_source.html  CMakeLists.txt  CMakeLists.txt~  Camera.cpp  Camera.h  Camera_8cpp_source.html  Camera_8h_source.html  Chunk_8cpp_source.html  Chunk_8h_source.html  ColliderFactory_8cpp_source.html  ColliderFactory_8h_source.html  Collider_8cpp_source.html  Collider_8h_source.html  ControlStatus_8cpp_source.html  ControlStatus_8h_source.html  ControlsManager_8cpp_source.html  ControlsManager_8h_source.html  Controls_8h_source.html  CubeMapTexture_8cpp_source.html  Dimension_8h_source.html  Effects_8h_source.html  ExactOctreeCollider_8cpp_source.html  ExactOctreeCollider_8h_source.html  FileLogHandler_8h_source.html  FragmentShader_8h_source.html  GameObject_8h_source.html  Globals_8cpp_source.html  Globals_8h_source.html  HUDGraphic_8cpp_source.html  HUDGraphic_8h_source.html  (+175 more)
Debug/: vc120.idb
Debug/OpenGL_project.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/OpenGL_project.tlog/: CL.read.1.tlog  CL.write.1.tlog  OpenGL_project.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/Modules/: FindALUT.cmake  FindASSIMP.cmake  (+6 more)
config/: controls.json
hooks/: pre-push  setup_hooks.py
includes/: AABB.h  AABB2.h  AABB2.h~  AudioManager.h  BFBroadPhase.h  BoneInfo.h  BoneMatrices.h  BroadPhase.h  BroadPhaseCollider.h  BroadPhaseCollision.h  Camera.h  Camera.h~  Car.h  CarMoveComponent.h  Chunk.h  Collider.h  ColliderFactory.h  ControlStatus.h  Controls.h  ControlsManager.h  CubeMapTexture.h  DestructorUtils.h  Dimension.h  Effects.h  ExactPhaseCollider.h  FileLogHandler.h  FileWatcher.h  FireParticle.h  Font.h  FontManager.h  GLSquare.h  GameObject.h  GameObjectType.h  Globals.h  HUDGraphic.h  HudRenderComponent.h  HudRenderer.h  IComponent.h  IDrawable.h  IDrawable.h.gch  (+65 more)
lib/: README.md  catch.hpp  freeglutd.lib  lib.rar
scenes/: R_wing.mtl  Thumbs.db  alterwat02.tga  boblampclean.obj.mtl  boxwNormals.mtl  boxwoNormals.mtl  car.mtl  island2.mtl  island2Collision.blend  island2Collision.mtl  shot.mtl  skybox.mtl  skybox0001.tga  skybox0002.tga  skybox0003.tga  skybox0004.tga  skybox0005.tga  skybox0006.tga  skyboxnight.mtl  spaceship.mtl  sphere.mtl  test.mtl  water.mtl  world.blend  world.blend1  world.mtl
search/: all_11.js  all_13.js  all_3.js  all_4.js  all_5.js  all_7.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_10.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_c.js  functions_e.js  functions_f.js  searchdata.js
shaders/: cutoff.frag  emissive.frag  emissive.vert  horizontal_blur.frag  hud.frag  hud.vert  particle.frag  particle.vert  postFx.frag  postFx.vert  shadowMap.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  vertical_blur.frag
src/: CMakeLists.txt  Camera.cpp  CubeMapTexture.cpp  Mesh.cpp  SceneRenderer.cpp  Skybox.cpp  Triangle.cpp  example.cpp  main.cpp  test.cpp  test.cpp~
src/Input/: CMakeLists.txt  ControlStatus.cpp  ControlsManager.cpp  Input.cpp  JoystickAxis.cpp  JoystickButton.cpp  JoystickTranslation.cpp  JoystickTranslator.cpp  KeyboardButton.cpp  MouseAxis.cpp  MouseButton.cpp  MousePosition.cpp  MouseWarp.cpp
src/Misc/: CMakeLists.txt  CubeMapTexture.cpp  FileWatcher.cpp  FileWatcher.h  InputManager.cpp  ResourceManager.cpp  Utils.h
src/cameras/: CMakeLists.txt  Camera.cpp  PerspectiveCamera.cpp
src/collision/: BFBroadPhase.cpp  BFBroadPhase.h  CMakeLists.txt  Collider.cpp  Collider.h  ColliderFactory.cpp  ExactOctreeCollider.cpp  ExactOctreeCollider.h  Octree.cpp  TwoPhaseCollider.cpp  TwoPhaseCollider.h
src/common/: CMakeLists.txt  Timer.cpp  Utils.cpp  common.cpp
src/components/: CMakeLists.txt  CarMoveComponent.cpp  HudRenderer.cpp  MoveComponent.cpp  StandardRenderer.cpp
src/core/: CMakeLists.txt  Globals.cpp  Renderer.cpp  Renderer.h  Window.cpp
src/effects/: Effects.h
src/glutil/: CMakeLists.txt  glutil.cpp
src/linmath/: CMakeLists.txt  Quaternion.cpp  SmallVector3.inl  float2.cpp  float3.cpp  float3x3.cpp  float4.cpp  float4x4.cpp  int2.cpp  int3.cpp  int4.cpp
src/logging/: CMakeLists.txt  Logger.cpp
src/objects/: BoneInfluenceOnVertex.cpp  BoneInfluenceOnVertex.h  BoneTransformer.cpp  BoneTransformer.h  CMakeLists.txt  Chunk.cpp  Chunk.h  GameObject.cpp  ImageTexture.cpp  Mesh.cpp  ParticleGenerator.cpp  Scene.cpp  Scene.h  Shader.cpp  SkinnedMesh.cpp  SkyBoxRenderer.cpp  Skybox.cpp  Texture.cpp  Triangle.cpp  VertexBoneData.cpp  VertexBoneData.h  Water.cpp  Wind.cpp  WindAffection.cpp  inc.h~  shader.cpp
src/objects/lights/: Lights.h
src/particle/: CMakeLists.txt  FireParticle.cpp  Particle.cpp  Particle.h  ParticleConf.h  ParticleGenerator.cpp  ParticleRenderer.cpp
src/shader/: CMakeLists.txt  FragmentShader.cpp  FragmentShader.h  ShaderProgram.cpp  VertexShader.cpp  VertexShader.h
src/sound/: AudioManager.cpp  CMakeLists.txt  SoundManager.cpp
src/userInterface/: CMakeLists.txt  Dimension.cpp  Font.cpp  FontManager.cpp  GLSquare.cpp  HUDGraphic.cpp  HudRenderComponent.cpp  HudRenderer.cpp  IHudDrawable.cpp  InsideChecker.h  InsideRoundedSquareChecker.cpp  InsideRoundedSquareChecker.h  InsideSquareChecker.cpp  InsideSquareChecker.h  Layout.cpp  ListLayout.cpp  PositioningLayout.cpp  RelativeIHudDrawable.cpp  TextLayout.cpp  TextObject.cpp  UIImage.cpp  View.cpp
test/: CMakeLists.txt  collider_test.cpp  hud_renderer_test.cpp.cpp  is_inside_test.cpp  octree_test.cpp  skeletalAnimationTests.cpp  test.cpp
(+68 files in other folders)
